infra/grpc_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istioworker
spec:  
  replicas: 2
  selector:
    matchLabels:
      app: istioworker
      version: v1
  template:
    metadata:
      labels:
        app: istioworker
        version: v1
    spec:
      containers:
        - name: wkr
          image: eccbot/istioworker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              
---

kind: Service
apiVersion: v1
metadata:
  name: istioworker
  labels:
    app: istioworker
spec:
  selector:
    app: istioworker
  ports:
    - port: 80
      name: http
