infra/grpc_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiogrpc-v1
  labels:
    app: istiogrpc
    version: v1
spec:  
  selector:
    matchLabels:
      app: istiogrpc
      version: v1
  replicas: 1    
  template:
    metadata:
      labels:
        app: istiogrpc
        version: v1
    spec:
      containers:
        - name: svc
          ports:
            - containerPort: 80
          image: eccbot/istiogrpc:latest
          imagePullPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiogrpc-v2
  labels:
    app: istiogrpc
    version: v2
spec:
  selector:
    matchLabels:
      app: istiogrpc
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: istiogrpc
        version: v2
    spec:
      containers:
        - name: svc
          ports:
            - containerPort: 80
          image: eccbot/istiogrpc:latest
          imagePullPolicy: Always

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiogrpc-v3
  labels:
    app: istiogrpc
    version: v3
spec:
  selector:
    matchLabels:
      app: istiogrpc
      version: v3
  replicas: 1
  template:
    metadata:
      labels:
        app: istiogrpc
        version: v3
    spec:
      containers:
        - name: svc
          ports:
            - containerPort: 80
          image: eccbot/istiogrpc:latest
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: istiogrpc
  labels:
    app: istiogrpc
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: istiogrpc
