infra/grpc_dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-server-service
spec:
  host: grpc-server-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3    
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
